# papo

./: .env.example  .gitignore  README.md  build.sh  compose.yaml  manage.py  notas.txt  pyproject.toml
.github/workflows/: tests.yaml
accounts/: tests.py  views.py
chat/: consumers.py  models.py  tests.py  urls.py  views.py
chat/static/js/: chat.js  online-profile.js  online.js
chat/templates/: base.html  chat-list.html  footer.html
chat/templates/chat/: chat.html  home.html  profile.html  search.html
clairo/: asgi.py  settings.py
papo/: asgi.py  settings.py  urls.py  wsgi.py
templates/: 404.html  500.html
templates/registration/: update_password.html
