[project]
name = "clairo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels-redis>=4.3.0",
    "channels[daphne]>=4.3.1",
    "cryptography>=46.0.1",
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "django-allauth>=65.11.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.5",
    "whitenoise[brotli]>=6.11.0",
]

[tool.ruff]
exclude = ["urls.py", "migrations", ".venv"]
line-length = 88

[tool.ruff.format]
indent-style = "tab"
quote-style = "single"
